# NinjaTraderApi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ninja_trader_api.pc.in
examples/: CMakeLists.txt  place_order.c  simple_trading.c
include/ninja/: ninja_api.h  ninja_types.h
scripts/: build_all_platforms.bat  build_all_platforms.sh
src/: ninja_account.c  ninja_api.c  ninja_auth.c  ninja_client.h  ninja_contracts.c  ninja_orders.c  ninja_platform.h  ninja_positions.c
tests/: CMakeLists.txt  test_basic.c
